get create branch

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@ html,body {height: 100%;}
 body {
 	margin: 0px;
 	padding: 0px;
-	color: #fff;	/*全体の文字色*/
+	color: rgb(0, 0, 0);	/*全体の文字色*/
 	font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;	/*フォント種類*/
 	font-size: 16px;	/*文字サイズ*/
 	line-height: 2;		/*行間*/
-	background: #002a7e;	/*背景色*/
+	background: #ffffff;	/*背景色*/
 	-webkit-text-size-adjust: none;
 }
 h1,h2,h3,h4,h5,p,ul,ol,li,dl,dt,dd,form,figure,form {margin: 0px;padding: 0px;font-size: 100%;font-weight: normal;}
@@ -33,7 +33,7 @@ iframe {width: 100%;}
 /*リンク（全般）設定
 ---------------------------------------------------------------------------*/
 a {
-	color: #fff;		/*リンクテキストの色*/
+	color: rgb(0, 0, 0);		/*リンクテキストの色*/
 	transition: 0.5s;	/*マウスオン時の移り変わるまでの時間設定。0.5秒。*/
 }
 a:hover {
@@ -47,7 +47,7 @@ header {
 	height: 100%;
 	overflow: auto;
 	position: relative;
-	background: #003ebb;	/*背景色*/
+	background: #ffffff;	/*背景色*/
 }
 /*ロゴ画像*/
 header #logo img {
@@ -80,13 +80,13 @@ header #logo img {
 #menubar li a {
 	text-decoration: none;display: block;text-align: center;
 	width: 140px;	/*メニューの幅*/
-	color: #fff;	/*文字色*/
+	color: rgb(0, 0, 0);	/*文字色*/
 	border-bottom: 2px solid transparent;	/*下線の幅、線種、色。transparentは透明の事。*/
 	padding-bottom: 7px;	/*下線と文字の間にとる余白*/
 }
 /*マウスオン時の指定*/
 #menubar li a:hover {
-	border-bottom: 2px solid #fff;	/*下線の幅、線種、色*/
+	border-bottom: 2px solid rgb(0, 0, 0);	/*下線の幅、線種、色*/
 	letter-spacing: 0.1em;			/*文字間隔を少しだけ広くする指定。そのままがいいならこの１行を削除。*/
 }
 
@@ -176,16 +176,16 @@ header #logo img {
 footer {
 	clear: both;
 	text-align: center;
-	background: #000;	/*背景色*/
-	color: #fff;		/*文字色*/
+	background:#fff;	/*背景色*/
+	color: rgb(0, 0, 0);		/*文字色*/
 	font-size: 85%;		/*文字サイズ*/
 }
 footer a {
-	color: #fff;	/*リンクテキストの文字色*/
+	color: rgb(0, 0, 0);	/*リンクテキストの文字色*/
 	text-decoration: none;
 }
 footer a:hover {
-	color: #fff;	/*マウスオン時の文字色*/
+	color: rgb(0, 0, 0);	/*マウスオン時の文字色*/
 }
 footer .pr {
 	display: block;
@@ -214,7 +214,7 @@ footer .pr {
 ---------------------------------------------------------------------------*/
 /*テーブル１行目に入った見出し部分（※caption）*/
 .ta1 caption {
-	border: 1px solid #fff;	/*テーブルの枠線の幅、線種、色*/
+	border: 1px solid rgb(0, 0, 0);	/*テーブルの枠線の幅、線種、色*/
 	border-bottom: none;	/*下線だけ消す*/
 	text-align: center;		/*文字をセンタリング*/
 	font-weight: bold;		/*太字に*/
@@ -233,7 +233,7 @@ footer .pr {
 }
 .ta1, .ta1 td, .ta1 th {
 	word-break: break-all;
-	border: 1px solid #fff;	/*テーブルの枠線の幅、線種、色*/
+	border: 1px solid rgb(0, 0, 0);	/*テーブルの枠線の幅、線種、色*/
 	padding: 10px;			/*テーブル内の余白*/
 }
 /*テーブルの左側ボックス*/
@@ -252,20 +252,20 @@ footer .pr {
 	position: fixed;
 	right: 30px;		/*右からの配置場所指定*/
 	bottom: 30px;		/*下からの配置場所指定*/
-	color: #fff;		/*文字色*/
-	background: rgba(0,0,0,0.4);	/*背景色。0,0,0は黒色の指定で0.4は色が40%出た状態。*/
-	border: 1px solid #fff;	/*枠線の幅、線種、色*/
+	color: rgb(0, 0, 0);		/*文字色*/
+	background:#fff;	/*背景色。0,0,0は黒色の指定で0.4は色が40%出た状態。*/
+	border: 1px solid rgb(0, 0, 0);	/*枠線の幅、線種、色*/
 }
 /*マウスオン時*/
 .scroll a:hover {
-	background: rgba(0,0,0,0.8);	/*背景色。0,0,0は黒色の指定で0.8は色が80%出た状態。*/
+	background:#fff;	/*背景色。0,0,0は黒色の指定で0.8は色が80%出た状態。*/
 }
 
 /*トップページのNEWアイコン
 ---------------------------------------------------------------------------*/
 .newicon {
 	background: #F00;	/*背景色*/
-	color: #FFF;		/*文字色*/
+	color: rgb(0, 0, 0);		/*文字色*/
 	font-size: 70%;
 	line-height: 1.5;
 	padding: 2px 5px;
